<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e4e7e4"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="31dp"
        android:background="#dfe0df" >

        <ImageView
            android:id="@+id/img_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_prev" />

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/arrow_next" />

        <TextView
            android:id="@+id/text_year_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:singleLine="true"
            android:text="2015.03.05"
            android:textColor="#616161"
            android:textSize="16sp" />
    </RelativeLayout>

    <GridView
        android:id="@+id/grid_calender"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="-1dp"
        android:layout_marginRight="-1dp"
        android:layout_weight="1"        
        android:drawSelectorOnTop="true"
        android:listSelector="@android:color/transparent"
        android:numColumns="7"
        android:stretchMode="columnWidth" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="22.5dp"
                android:background="#bdacad"
                android:gravity="center"
                android:tag="statistic_fragment_drink_text_msg01"
                android:text="@string/statistic_fragment_drink_text_msg01"
                android:textColor="#ffffff"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="39dp"
                android:background="#ffffff" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_success_day_count"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="31"
                        android:textColor="#525252"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="5dp"
                        android:tag="statistic_fragment_drink_text_msg03"
                        android:text="@string/statistic_fragment_drink_text_msg03"
                        android:textColor="#a0a0a0"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#ccbebf" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="22.5dp"
                android:background="#bdacad"
                android:gravity="center"
                android:tag="statistic_fragment_drink_text_msg02"
                android:text="@string/statistic_fragment_drink_text_msg02"
                android:textColor="#ffffff"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="39dp"
                android:background="#ffffff" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/text_average_water_volume"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:singleLine="true"
                        android:text="2,300"
                        android:textColor="#525252"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/unit_water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="5dp"
                        android:text="ml"
                        android:textColor="#a0a0a0"
                        android:textSize="15sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#ffffff" >
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>